=================
Changes for Crate
=================

unreleased
==========

 - Fixed an error that could occur if the same ``delete from
   <partitoned_table>`` or ``drop table <partitioned_table>`` statement is
   executed concurrently

2015/05/20 0.48.6
=================

 - Optimized ``DELETE FROM <partitioned_table>``

 - Fix: Handle concurrently dropped partitions while collecting rows

 - Fix: Updated es/upstream to prevent errors caused by too many cluster
   state updates when dropping tables with a huge amount of partitions

 - Fixed an issue that caused a node stop to always take up at least 10 seconds

 - Further improved bulk partition creation which can occur during ``COPY
   FROM`` or INSERTS with multi-values into partitioned tables


2015/05/15 0.48.5
=================

 - Fix: Deleting a partitioned table could return a succesful query result
   even if some partitions were not deleted correctly

 - ``COPY FROM``: imports from S3 will now retry the import in case of a
   read timeout.

 - Select queries will now wait a bit longer before throwing an error in case
   the shards of a table aren't fully active.

 - Fix: In some cases a ``DROP TABLE`` statment does not delete all
   partitions. Now it's possible to repeat the statement in order
   to delete the orphaned partitions.

2015/05/07 0.48.4
=================

NOTE: Upgrading from 0.47 or earlier versions requires a full cluster restart

 - Fix: fix update queries on partitioned tables which are partitioned
   by part of the primary key

 - Fix: correctly display initial and reset settings in ``sys.cluster.settings``

 - add dynamic settings ``bulk.request_timeout`` and ``bulk.partition_creation_timeout``

 - make the ``sys.shards.size`` expression refresh all 10 seconds maximum

 - Fixed an issue that caused GROUP BY queries with multiple group keys, no
   order by and limit to hang.

 - Increased performance of ``hostname`` and ``id`` expression for ``sys.nodes`` table

2015/04/28 0.48.3