@@ -402,7 +402,7 @@ public class Planner extends AnalyzedStatementVisitor<Planner.Context, Plan> {
         String[] indices = indices(tableInfo, whereClause);
         if (indices.length > 0) {
             if (tableInfo.isPartitioned() && !whereClause.hasQuery()) {
-                plan.add(new ESDeleteIndexNode(indices));
+                plan.add(new ESDeletePartitionNode(indices));
             } else {
                 // TODO: if we allow queries like 'partitionColumn=X or column=Y' which is currently
                 // forbidden through analysis, we must issue deleteByQuery request in addition
